# s3gw-ceph

./: .clang-format  .codespell-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  s3gw.spec
.github/: pull_request_template.md
.github/workflows/: build-image-on-pr-label.yaml  build-radosgw.yml  build-s3gw-container.yml  build-test-radosgw.yml  pr-add-to-project.yaml  pr-triage.yml  pre-commit.yml  test-radosgw.yml  test-s3gw.yml
etc/sysconfig/: s3gw
qa/rgw/store/sfs/: build-radosgw.sh
qa/rgw/store/sfs/tests/: helpers.sh  run-tests.sh  sfs-bench.sh  sfs-s3tests.sh  sfs-smoke-test.sh  test-sfs-buckets-rest-api.py  test-sfs-copy-object.py  test-sfs-lifecycle-smoke.py  test-sfs-list-objects.py  test-sfs-multipart.py  test-sfs-object-locking.py  test-sfs-unsupported.py  test-sfs-versioning-smoke.py
qa/rgw/store/sfs/tests/fixtures/: s3-tests.txt  s3-tests.yaml  s3tests.conf  s3tr_excuses.csv
qa/rgw/store/sfs/tests/regression-tests/: s3tests.conf
src/: CMakeLists.txt
src/cephadm/: cephadm
src/common/: environment.cc  environment.h  perf_counters.cc  perf_counters.h
src/common/options/: rgw.yaml.in
src/include/: config-h.in.cmake  types.h
src/rgw/: CMakeLists.txt  rgw_appmain.cc  rgw_main.cc  rgw_main.h  rgw_op.h  rgw_op_type.cc  rgw_op_type.h  rgw_perf_counters.cc  rgw_perf_counters.h  rgw_process.cc  rgw_process_env.h  rgw_rest.cc  rgw_rest_s3.cc  rgw_s3gw_telemetry.cc  rgw_s3gw_telemetry.h  rgw_sal.cc  rgw_sal_dbstore.cc  rgw_sal_sfs.cc  rgw_sal_sfs.h  rgw_sal_simplefile.cc  rgw_sal_simplefile.h  rgw_status_frontend.cc  rgw_status_frontend.h  rgw_status_page.cc  rgw_status_page.h  rgw_status_page_telemetry.cc  rgw_status_page_telemetry.h  rgw_user.cc  rgw_user.h
src/rgw/driver/dbstore/common/: dbstore.h
src/rgw/driver/rados/: rgw_rest_user.cc
src/rgw/driver/sfs/: CHANGELOG.md  CMakeLists.txt  bucket.cc  bucket.h  bucket_mgr.cc  bucket_mgr.h  fmt.h  multipart.cc  multipart.h  multipart_types.h  notification.h  object.cc  object.h  object_state.h  sfs_bucket.cc  sfs_gc.cc  sfs_gc.h  sfs_lc.cc  sfs_lc.h  sfs_user.cc  types.cc  types.h  user.cc  user.h  uuid_path.h  version_type.h  writer.cc  writer.h  zone.cc  zone.h
src/rgw/driver/sfs/sqlite/: conversion_utils.h  dbconn.cc  dbconn.h  errors.cc  errors.h  retry.h  sqlite_buckets.cc  sqlite_buckets.h  sqlite_lifecycle.cc  sqlite_lifecycle.h  sqlite_list.cc  sqlite_list.h  sqlite_multipart.cc  sqlite_multipart.h  sqlite_objects.cc  sqlite_objects.h  sqlite_schema.cc  sqlite_schema.h  sqlite_users.cc  sqlite_users.h  sqlite_versioned_objects.cc  sqlite_versioned_objects.h  users_conversions.cc  users_conversions.h  users_definitions.h
src/rgw/driver/sfs/sqlite/bindings/: blob.h  enum.h  real_time.h  uuid_d.h
src/rgw/driver/sfs/sqlite/buckets/: bucket_conversions.cc  bucket_conversions.h  bucket_definitions.h  multipart_conversions.cc  multipart_conversions.h  multipart_definitions.h
src/rgw/driver/sfs/sqlite/lifecycle/: lifecycle_definitions.h
src/rgw/driver/sfs/sqlite/objects/: object_conversions.cc  object_conversions.h  object_definitions.h
src/rgw/driver/sfs/sqlite/users/: users_conversions.cc  users_conversions.h  users_definitions.h
src/rgw/driver/sfs/sqlite/versioned_object/: versioned_object_conversions.cc  versioned_object_conversions.h  versioned_object_definitions.h
src/rgw/driver/simplefile/: bucket.cc  bucket.h  bucket_mgr.cc  bucket_mgr.h  multipart.cc  multipart.h  notification.h  object.cc  object.h  sfs_bucket.cc  sfs_paths.cc  sfs_user.cc  user.cc  user.h  writer.cc  writer.h  zone.cc  zone.h
src/rgw/driver/simplefile/sqlite/: sqlite_orm.h  sqlite_users.cc  sqlite_users.h  users_conversions.cc  users_conversions.h  users_definitions.h
src/rgw/store/dbstore/: dbstore_mgr.cc  dbstore_mgr.h
src/rgw/store/dbstore/common/: dbstore.cc  dbstore.h
src/rgw/store/dbstore/sqlite/: sqliteDB.cc  sqliteDB.h
src/rgw/store/sfs/: CHANGELOG.md  CMakeLists.txt  bucket.cc  bucket.h  bucket_mgr.cc  multipart.cc  multipart.h  notification.h  object.cc  object.h  sfs_bucket.cc  sfs_gc.cc  sfs_gc.h  sfs_user.cc  types.cc  types.h  user.cc  user.h  uuid_path.h  writer.cc  writer.h  zone.cc  zone.h
src/rgw/store/sfs/sqlite/: dbconn.h  sqlite_buckets.cc  sqlite_buckets.h  sqlite_objects.cc  sqlite_objects.h  sqlite_orm.h  sqlite_schema.h  sqlite_users.cc  sqlite_users.h  sqlite_versioned_objects.cc  sqlite_versioned_objects.h  users_conversions.cc  users_conversions.h
src/rgw/store/sfs/sqlite/buckets/: bucket_conversions.cc  bucket_definitions.h
src/rgw/store/sfs/sqlite/objects/: object_conversions.cc  object_conversions.h
src/rgw/store/sfs/sqlite/users/: users_conversions.cc  users_definitions.h
src/rgw/store/sfs/sqlite/versioned_object/: versioned_object_conversions.cc  versioned_object_conversions.h  versioned_object_definitions.h
src/rgw/store/simplefile/: bucket.cc  bucket.h  bucket_mgr.cc  bucket_mgr.h  multipart.h  notification.h  object.cc  object.h  sfs_bucket.cc  sfs_paths.cc  sfs_user.cc  user.cc  user.h  writer.cc  writer.h  zone.cc  zone.h
src/rgw/store/simplefile/sqlite/: sqlite_users.cc  users_conversions.cc  users_conversions.h  users_definitions.h
src/test/rgw/: CMakeLists.txt  test_rgw_s3gw_telemetry.cc
src/test/rgw/dbstore/: CMakeLists.txt  test_rgw_dbstore_mgr.cc
src/test/rgw/sfs/: CMakeLists.txt  rgw_sfs_utils.h  test_rgw_sfs_concurrency.cc  test_rgw_sfs_gc.cc  test_rgw_sfs_metadata_compatibility.cc  test_rgw_sfs_object_state_machine.cc  test_rgw_sfs_retry.cc  test_rgw_sfs_sfs_bucket.cc  test_rgw_sfs_sfs_user.cc  test_rgw_sfs_sqlite_buckets.cc  test_rgw_sfs_sqlite_lifecycle.cc  test_rgw_sfs_sqlite_list.cc  test_rgw_sfs_sqlite_objects.cc  test_rgw_sfs_sqlite_users.cc  test_rgw_sfs_sqlite_versioned_objects.cc  test_rgw_sfs_wal_checkpoint.cc
src/test/rgw/sfs/compatibility_test_cases/: columns_added.h  columns_deleted.h  optional_columns_added.h
src/test/rgw/simplefile/: CMakeLists.txt  test_rgw_simplefile_sqlite_users.cc
systemd/: s3gw.service
