add_custom_target(unittest_rgw_sfs)

function(add_s3gw_test test_name test_path)
  add_executable(${test_name} ${test_path})
  add_ceph_unittest(${test_name})
  target_link_libraries(${test_name} ${rgw_libs})
  set_tests_properties(${test_name} PROPERTIES LABELS "unittest;rgw;sfs;s3gw")
  add_dependencies(unittest_rgw_sfs ${test_name})
endfunction()

add_s3gw_test(unittest_rgw_sfs_sqlite_users test_rgw_sfs_sqlite_users.cc)
add_s3gw_test(unittest_rgw_sfs_sqlite_buckets test_rgw_sfs_sqlite_buckets.cc)
add_s3gw_test(unittest_rgw_sfs_sqlite_objects test_rgw_sfs_sqlite_objects.cc)
add_s3gw_test(unittest_rgw_sfs_sqlite_versioned_objects test_rgw_sfs_sqlite_versioned_objects.cc)
add_s3gw_test(unittest_rgw_sfs_sqlite_lifecycle test_rgw_sfs_sqlite_lifecycle.cc)
add_s3gw_test(unittest_rgw_sfs_sfs_bucket test_rgw_sfs_sfs_bucket.cc)
add_s3gw_test(unittest_rgw_sfs_sfs_user test_rgw_sfs_sfs_user.cc)
add_s3gw_test(unittest_rgw_sfs_gc test_rgw_sfs_gc.cc)
add_s3gw_test(unittest_rgw_sfs_object_state_machine test_rgw_sfs_object_state_machine.cc)
